--- a/debian/control
+++ b/debian/control
@@ -16,6 +16,7 @@ Build-Depends: bison,
                qttools5-dev,
                qttools5-dev-tools
 Standards-Version: 3.9.6
+XS-Testsuite: autopkgtest
 Homepage: https://projects.kde.org/projects/frameworks/solid
 Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/frameworks/solid.git
 Vcs-Git: git://anonscm.debian.org/pkg-kde/frameworks/solid.git
