--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,7 @@ Build-Depends: bison,
 Standards-Version: 3.9.6
 XS-Testsuite: autopkgtest
 Homepage: https://projects.kde.org/projects/frameworks/solid
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/frameworks/solid.git
+Vcs-Browser: http://anonscm.debian.org/cgit/pkg-kde/frameworks/solid.git
 Vcs-Git: git://anonscm.debian.org/pkg-kde/frameworks/solid.git
 
 Package: libkf5solid-dev
@@ -70,10 +70,10 @@ Description: Qt library to query and control hardware
  This package contains the solid-hardware5 tool.
 
 Package: qtdeclarative5-kf5solid
+Section: oldlibs
+Priority: extra
 Architecture: all
 Depends: qml-module-org-kde-solid, ${misc:Depends}, ${shlibs:Depends}
-Priority: extra
-Section: oldlibs
 Description: transitional package to renamed qml-module-org-kde-solid
  Transitional package for qml-module-org-kde-solid.  This package is
  safe to remove.
@@ -93,10 +93,10 @@ Description: Qt library to query and control hardware plugin
  This package is part of KDE Frameworks 5.
 
 Package: libkf5solid5-dbg
-Architecture: any
-Multi-Arch: same
 Section: debug
 Priority: extra
+Architecture: any
+Multi-Arch: same
 Depends: libkf5solid5 (= ${binary:Version}), ${misc:Depends}
 Description: debug symbols for libsolid
  Solid is a device integration framework. It provides a way of querying and
