--- a/debian/control
+++ b/debian/control
@@ -7,11 +7,10 @@ Build-Depends: bison,
                cmake (>= 2.8.12),
                extra-cmake-modules (>= 1.7.0),
                flex,
-               libhupnp-dev,
                libudev-dev [linux-any],
                pkg-kde-tools (>= 0.15.15ubuntu1~),
                qtbase5-dev (>= 5.2.0),
-               qtdeclarative5-dev,
+               qtdeclarative5-dev (>= 5.2.0),
                qttools5-dev,
                qttools5-dev-tools
 Standards-Version: 3.9.6
