--- a/debian/control
+++ b/debian/control
@@ -5,6 +5,7 @@ Maintainer: Debian/Kubuntu Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Maximiliano Curia <maxy@debian.org>
 Build-Depends: bison,
                cmake (>= 2.8.12),
+               debhelper (>= 9),
                extra-cmake-modules (>= 1.7.0),
                flex,
                libudev-dev [linux-any],
