--- a/debian/control
+++ b/debian/control
@@ -17,7 +17,7 @@ Build-Depends: bison,
                qttools5-dev-tools
 Standards-Version: 3.9.6
 Homepage: https://projects.kde.org/projects/frameworks/solid
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/frameworks/solid.git
+Vcs-Browser: http://anonscm.debian.org/cgit/pkg-kde/frameworks/solid.git
 Vcs-Git: git://anonscm.debian.org/pkg-kde/frameworks/solid.git
 
 Package: libkf5solid-dev
