Move auto test to autopkgtests.

--- a/debian/rules
+++ b/debian/rules
@@ -5,3 +5,7 @@ include /usr/share/pkg-kde-tools/qt-kde-team/3/debian-qt-kde.mk
 
 override_dh_strip:
 	dh_strip --dbg-package=libkf5solid5-dbg
+
+override_dh_auto_test:
+	# Disable dh_auto_test at build time
+	:
