Add missing build dependency.

--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,7 @@ Build-Depends: bison,
                flex,
                libudev-dev [linux-any],
                pkg-kde-tools (>= 0.15.15ubuntu1~),
+               qt5-qmltooling-plugins,
                qtbase5-dev (>= 5.4),
                qtdeclarative5-dev (>= 5.4),
                qttools5-dev (>= 5.4),
