--- a/debian/control
+++ b/debian/control
@@ -17,8 +17,8 @@ Build-Depends: bison,
                qttools5-dev-tools (>= 5.4)
 Standards-Version: 3.9.6
 Homepage: https://projects.kde.org/projects/frameworks/solid
-Vcs-Browser: http://anonscm.debian.org/cgit/pkg-kde/frameworks/solid.git
-Vcs-Git: git://anonscm.debian.org/pkg-kde/frameworks/solid.git
+Vcs-Browser: https://anonscm.debian.org/git/pkg-kde/frameworks/solid.git
+Vcs-Git: https://anonscm.debian.org/git/pkg-kde/frameworks/solid.git
 
 Package: libkf5solid-dev
 Section: libdevel
