--- a/debian/control
+++ b/debian/control
@@ -32,6 +32,7 @@ Description: Qt library to query and control hardware
  This package is part of KDE Frameworks 5.
  .
  This package contains the development files.
+Breaks: kio-dev (<< 5.25), libkf5kio-dev (<< 5.25)
 
 Package: libkf5solid5
 Architecture: any
@@ -45,6 +46,12 @@ Description: Qt library to query and control hardware
  interacting with hardware independently of the underlying operating system.
  .
  Solid is part of KDE Frameworks 5.
+Breaks: baloo-kf5 (<< 5.25),
+        kio (<< 5.25),
+        libkf5baloo5 (<< 5.25),
+        libkf5kdelibs4support5 (<< 5.25),
+        libkf5kiofilewidgets5 (<< 5.25),
+        libkf5runner5 (<< 5.25)
 
 Package: libkf5solid5-data
 Architecture: all
