--- a/debian/rules
+++ b/debian/rules
@@ -3,6 +3,9 @@
 
 include /usr/share/pkg-kde-tools/qt-kde-team/3/debian-qt-kde.mk
 
+override_dh_auto_configure:
+	$(overridden_command) -- -DBUILD_QCH=ON
+
 override_dh_strip:
 	dh_strip --dbgsym-migration='libkf5solid5-dbg (<= 5.19.0-1~~)'
 
