--- a/debian/control
+++ b/debian/control
@@ -48,7 +48,7 @@ Description: Qt library to query and control hardware
  This package is part of KDE Frameworks 5.
  .
  This package contains the development files.
-Breaks: kio-dev (<< 5.28), libkf5kio-dev (<< 5.41)
+Breaks: kio-dev (<< 5.28), libkf5kio-dev (<< 5.42)
 
 Package: libkf5solid-doc
 Architecture: all
@@ -75,12 +75,15 @@ Description: Qt library to query and control hardware
  interacting with hardware independently of the underlying operating system.
  .
  Solid is part of KDE Frameworks 5.
-Breaks: baloo-kf5 (<< 5.41),
-        kio (<< 5.41),
-        libkf5baloo5 (<< 5.41),
-        libkf5kdelibs4support5 (<< 5.41),
-        libkf5kiofilewidgets5 (<< 5.41),
-        libkf5runner5 (<< 5.41),
+Breaks: baloo-kf5 (<< 5.42),
+        kdesignerplugin (<< 5.42),
+        kio (<< 5.42),
+        kross (<< 5.42),
+        libkf5baloo5 (<< 5.42),
+        libkf5kdelibs4support5 (<< 5.42),
+        libkf5kdelibs4support5-bin (<< 5.42),
+        libkf5kiofilewidgets5 (<< 5.42),
+        libkf5runner5 (<< 5.42),
 
 Package: libkf5solid5-data
 Architecture: all
